--- a/package.json
+++ b/package.json
@@ -1,13 +1,9 @@
 {
   "name": "notion-youtube-videos",
   "version": "1.0.0",
-  "description": "Agregador de vídeos do YouTube para Notion",
   "type": "module",
-  "scripts": {
-    "start": "node index.js"
-  },
   "dependencies": {
-    "node-fetch": "^3.3.2",
-    "feedparser-promised": "^2.0.1"
+    "@notionhq/client": "^2.2.15",
+    "node-fetch": "^3.3.2"
   }
 }
